# tuxaqfh

./: AUTHORS  CHANGES  Makefile  Makefile.am  Makefile.in  README  configure  configure.ac  configure.in  mkinstalldirs  toMirror
contrib/: Makefile  Makefile.am  Makefile.in  README  tux_3dfx.sh
data/: HANDLES  Makefile  Makefile.in  README
doc/: Makefile  Makefile.am  Makefile.in  building_levels.html  index.html  keystrokes.html  levels.html  running.html  slam.html  story.html
fonts/: Makefile  Makefile.in
images/: Atennisball.rgb  Atennisground.rgb  Atennisracketl.rgb  Gimp_roolz.rgb  Linux_roolz.rgb  Makefile  Makefile.in  NTLUG_roolz.rgb  arrow.rgb  ball.rgb  blue_neon.rgba  blue_pebbles.rgb  blue_stone.rgb  blue_stripe.rgb  (+53 more)
src/: Makefile  Makefile.am  Makefile.in  camera.cxx  camera.h  components.cxx  components.h  fade_out.cxx  fade_out.h  feature.cxx  feature.h  gfx.cxx  gfx.h  globalstate.cxx  globalstate.h  gui.cxx  gui.h  hooks.cxx  hooks.h  isect.cxx  level.cxx  level.h  material.cxx  material.h  ocean.cxx  ocean.h  orca.cxx  orca.h  penguin.cxx  penguin.h  rocket.cxx  rocket.h  score.cxx  slam.cxx  slam.h  slamCodeGen.cxx  slamExpression.cxx  slamRun.cxx  slamStatement.cxx  slamSymbols.cxx  (+14 more)
src/.deps/: camera.P  components.P  fade_out.P  feature.P  gfx.P  globalstate.P  gui.P  hooks.P  isect.P  level.P  material.P  ocean.P  orca.P  penguin.P  rocket.P  score.P  slam.P  slamCodeGen.P  slamExpression.P  slamRun.P  slamStatement.P  slamSymbols.P  slamToken.P  slide.P  slide_data.P  sound.P  starwing.P  status.P  surf_rev.P  tux.P  tuxstate.P  whale.P
(+264 files in other folders)
