# src/

bindir=$(prefix)/games

bin_PROGRAMS = tux_aqfh

tux_aqfh_SOURCES = \
       camera.cxx components.cxx fade_out.cxx feature.cxx \
       gfx.cxx globalstate.cxx gui.cxx hooks.cxx score.cxx \
       isect.cxx level.cxx material.cxx ocean.cxx \
       orca.cxx penguin.cxx rocket.cxx \
       sound.cxx starwing.cxx status.cxx \
       surf_rev.cxx tux.cxx tuxstate.cxx whale.cxx \
       slamRun.cxx slamCodeGen.cxx slamExpression.cxx slam.cxx \
       slamStatement.cxx slamSymbols.cxx slamToken.cxx \
       camera.h components.h fade_out.h feature.h \
       gfx.h globalstate.h gui.h hooks.h \
       isect.h joystick.h level.h material.h \
       ocean.h orca.h penguin.h rocket.h \
       sound.h starwing.h status.h \
       tux.h tuxstate.h whale.h slam.h

